# vulkan-framework

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
cmake/: FindStdModules.cmake  Win32Presets.cmake  dxc_compiler.cmake  glsl_compiler.cmake  hlsl_compiler.cmake  shader_compiler.cmake  std23modules.cmake
src/: CMakeLists.txt  main.cpp
src/shaders/: CMakeLists.txt  basic_compute.comp  basic_compute.hlsl  basic_pc_shader.vert  basic_shader.vert  simple_shader.vert
src/std23/: CMakeLists.txt  std.hpp
src/vfw-application/: CMakeLists.txt  application.ixx  clock.ixx  input.ixx  main.cpp  pch.hpp  window.ixx
src/vulkan-framework/: CMakeLists.txt  buffer.ixx  commandpool.ixx  context.ixx  descriptors.ixx  device.ixx  engine.ixx  image.ixx  instance.ixx  pch.hpp  pipeline.ixx  pipelines.ixx  renderer.ixx  swap_chain.ixx  swapchain.ixx  synchronization.ixx  vertex.ixx  vma-usage.hpp  vulkan-framework.ixx  vulkan-types.ixx
